# chatbot

./: .env.example  .gitignore  Dockerfile  LICENSE  Modelfile  PR.md  README.md  add_regions_and_test.py  add_test_regions.py  chat_response3.json  chat_response5.json  check_regions_table.py  clone_db.sh  create_choropleth_view.sql  create_conversation_table.sql  docker-compose.prod.yml  docker-compose.yml  explore_json.sql  full_response.txt  initialize_db.py  insert_region_with_timeout.py  insert_single_region.py  insert_test_region.py  list_tables.py  main.py  mastercard-script-part1.sql  mastercard_geospatial_analysis.md  populate_5_regions_batch.py  pyproject.toml  rebuild_backend.sh  requirements.txt  response.json  response.txt  response2.txt  response3.txt  run_frontend.py  run_server.py  setup_env.py  start.sh  test_api.py  (+7 more)
.github/workflows/: main.yml
app/: __init__.py  fix_script.py  main.py  test_syntax.py
app/agent/: tourism_agent.py
app/agents/: agent_service.py  base_agent.py  geo_insight_agent.py  sql_agent.py  visualization_agent.py
app/api/: chat.py  query.py  schema.py  visualization.py
app/core/: __init__.py  config.py  langsmith_config.py
app/dashboard/: g1b23.shx  ticino_map.py
app/db/: __init__.py  database.py  dw_connection.py  models.py  postgres.py  schema_manager.py  session.py  vector_store.py
app/frontend/: README.md  requirements.txt  streamlit_app.py
app/graph/: analysis_node.py  build_graph.py  query_executor.py  sql_node.py
app/llm/: claude_adapter.py  gemini_adapter.py  (+3 more)
chroma/: Dockerfile.chroma
db/: init.sql  postgresql.conf
evaluation/: benchmark_simulation.py  evaluate.py  rag_evaluation_framework.py
frontend/: .dockerignore  Dockerfile.frontend  README.md  app.py  config.py  langchain_integration.py  nohup.out  package-lock.json  package.json  requirements.txt  requirements_langchain.txt  setup_langchain.sh
note/: langchain_geospatial_integration.md
(+148 files in other folders)
