[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tourism-data-chatbot"
version = "1.0.0"
description = "An intelligent chatbot system for analyzing tourism data in Switzerland"
readme = "README.md"
authors = [
    {name = "Jahua", email = "jahuala@gmail.com"}
]
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.230"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["frontend*", "venv*", ".venv*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
ignore = [] 